# drillbit

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  tox.ini
modelling/__clone_folders/: __updates.py  statements.py
modelling/__deprecated/snapshot/: snapshot.py
modelling/__updates/: __init__.py  __updates.py  config.yml  excel.py
modelling/bitcoin/: excel.py  helpers.py  price_lookups.py  state.py  style.py
modelling/bitcoin/charts/: charts.py
modelling/bitcoin/statements/: __init__.py  funcs.py  statements.py
modelling/demo/: demo.py
modelling/drillbit/: __init__.py  demo.py  excel.py  helpers.py  price_lookups.py  state.py  style.py
modelling/drillbit/charts/: charts.py
modelling/drillbit/statements/: statements.py
modelling/envirosim/: __init__.py  charts.py  config.yml  envirosim.py  excel.py  statements.py
modelling/generic/: config.yml  excel.py  generic.py  statements.py
src/btc/: __init__.py  funcs.py  meta.py  objects.py  sim.py  units.py
src/drillbit/: __init__.py  __new_objects.py  __new_units__.py  environment.py  mining.py  objects.py  sim.py  units.py
src/drillbit/statements/: funcs.py  statements.py
tests/: test_units.py
