[metadata]
name = drillbit
version = 0.0.1
author = rjskene
author_email = rjskene83@gmail.com
description = A package for modelling bitcoin mining
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/rskene/finstat
# project_urls =
#    Bug Tracker = https://github.com/rskene/finstat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.9.6
install_requires = 
    finstat>=0.11.3
    xlwings==0.27.2
    matplotlib==3.5.2
    beautifulsoup4==4.11.1
    tqdm==4.64.0

[options.packages.find]
where = src
include = drillbit*
